--- a/style.css
+++ b/style.css
@@ -57,27 +57,6 @@ body, html, *{
     width: 80%;
     padding-left: 20px;
 }
-@keyframes ilustraciones{
-    0%{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
-    }
-    20%{
-        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
-    }
-    40%{
-        clip-path: polygon(9% 0, 100% 0, 100% 100%, 10% 100%, 25% 40%);
-    }
-    60%{
-        clip-path: polygon(29% 0, 100% 0, 100% 100%, 17% 100%, 5% 43%);
-    }
-    80%{
-        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
-    }
-    100%{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
-    }
-}
-
 .plan{
     width: 100%;
     z-index: 1;
@@ -171,4 +150,61 @@ body, html, *{
 }
 body::-webkit-scrollbar{
     display: none;
+}
+@media screen and (max-width: 899px){
+    .plan .meta{
+        padding: 0px 20px 0px 20px;
+    }
+    .cabecera{
+        padding: 10px 20px 5px 20px;
+    }
+    .ilustraciones{
+        width: 100%;
+        height: 40vh;
+        bottom: 0;
+        left: 0;
+        top: unset;
+        animation: ilustraciones-movil 20s infinite ease;
+        clip-path: polygon(0 0, 30% 0, 100% 0, 100% 100%, 30% 100%, 0 99%, 0 57%, 0 35%);
+    }
+}
+@keyframes ilustraciones{
+    0%{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+    }
+    20%{
+        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+    }
+    40%{
+        clip-path: polygon(9% 0, 100% 0, 100% 100%, 10% 100%, 25% 40%);
+    }
+    60%{
+        clip-path: polygon(29% 0, 100% 0, 100% 100%, 17% 100%, 5% 43%);
+    }
+    80%{
+        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+    }
+    100%{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+    }
+}
+@keyframes ilustraciones-movil{
+    0%{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+    }
+    20%{
+        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+    }
+    40%{
+        clip-path: polygon(9% 0, 100% 0, 100% 100%, 10% 100%, 25% 40%);
+    }
+    60%{
+        clip-path: polygon(29% 0, 100% 0, 100% 100%, 17% 100%, 5% 43%);
+    }
+    80%{
+        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+    }
+    100%{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+    }
 }
