Segunda prueba movil

--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ body, html, *{
     font-weight: lighter;
     font-size: 18pt;
 }
+.plan .meta .fecha span.fecha-movil{
+    display: none;
+    font-weight: normal;
+}
 .plan .meta .desc{
     width: 80%;
     font-weight: lighter;
@@ -155,17 +159,26 @@ body::-webkit-scrollbar{
     .plan .meta{
         padding: 0px 20px 0px 20px;
     }
+    .plan .fecha > span{
+        display: block;
+    }
+    .plan .meta .fecha span.diagonal{
+        display: none;
+    }
+    .plan .meta .fecha span.fecha-movil{
+        display: inline-block;
+    }
     .cabecera{
         padding: 10px 20px 5px 20px;
     }
     .ilustraciones{
         width: 100%;
-        height: 40vh;
+        height: 30vh;
         bottom: 0;
         left: 0;
         top: unset;
         animation: ilustraciones-movil 20s infinite ease;
-        clip-path: polygon(0 0, 30% 0, 100% 0, 100% 100%, 30% 100%, 0 99%, 0 57%, 0 35%);
+        clip-path: polygon(45% 18%, 100% 11%, 100% 100%, 0 100%, 0 0);
     }
 }
 @keyframes ilustraciones{
@@ -190,21 +203,21 @@ body::-webkit-scrollbar{
 }
 @keyframes ilustraciones-movil{
     0%{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+        clip-path: polygon(45% 18%, 100% 11%, 100% 100%, 0 100%, 0 0);
     }
     20%{
-        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+        clip-path: polygon(38% 0, 100% 7%, 100% 100%, 0 100%, 0 18%);
     }
     40%{
-        clip-path: polygon(9% 0, 100% 0, 100% 100%, 10% 100%, 25% 40%);
+        clip-path: polygon(53% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
     }
     60%{
-        clip-path: polygon(29% 0, 100% 0, 100% 100%, 17% 100%, 5% 43%);
+        clip-path: polygon(51% 10%, 100% 0, 100% 100%, 0 100%, 0 0);
     }
     80%{
-        clip-path: polygon(15% 0, 100% 0, 100% 100%, 31% 100%, 0 62%);
+        clip-path: polygon(51% 10%, 100% 14%, 100% 100%, 0 100%, 0 0);
     }
     100%{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 20% 62%);
+        clip-path: polygon(45% 18%, 100% 11%, 100% 100%, 0 100%, 0 0);
     }
 }
